2012-08-18  klen

	* Version 0.1.2
	* Minor release

2012-08-13  klen

	* Version 0.1.0
	* Initial release