@@ -2,6 +2,7 @@ from importlib import import_module
 
 from sqlalchemy.orm.interfaces import MANYTOONE
 from sqlalchemy.types import BIGINT, BOOLEAN, BigInteger, Boolean, CHAR, DATE, DATETIME, DECIMAL, Date, DateTime, FLOAT, Float, INT, INTEGER, Integer, NCHAR, NVARCHAR, NUMERIC, Numeric, SMALLINT, SmallInteger, String, TEXT, TIME, Text, Time, Unicode, UnicodeText, VARCHAR
+from sqlalchemy import func
 
 from . import generators
 
@@ -45,9 +46,9 @@ class GeneratorRegistry:
         self.add_generator([Time, TIME],
                            generators.random_time_string_maker)
 
-    def add_generator(self, types, func):
+    def add_generator(self, types, f):
         for cls in types:
-            self.generators[cls] = func
+            self.generators[cls] = f
 
     def get(self, cls):
         return self.generators.get(
@@ -65,10 +66,10 @@ class ModelMixer:
             mod, cls = model_class.rsplit('.', 1)
             mod = import_module(mod)
             model_class = getattr(mod, cls)
-        self.model_class = model_class
+        self.mapper = model_class._sa_class_manager.mapper
 
     def blend(self, mixer, **explicit_values):
-        target = self.model_class()
+        target = self.mapper.class_()
 
         model_explicit_values = {}
         related_explicit_values = {}
@@ -81,23 +82,30 @@ class ModelMixer:
                 model_explicit_values[key] = value
 
         self.set_explicit_values(target, model_explicit_values)
+        exclude = model_explicit_values.keys()
         self.set_local_fields(
             target, mixer,
-            exclude=model_explicit_values.keys(),
+            exclude=exclude)
+        self.set_related_fields(
+            target, mixer,
+            exclude=exclude,
             related_explicit_values=related_explicit_values)
         return target
+
+    def beat(self, mixer, **explicit_values):
+        pass
 
     @staticmethod
     def set_explicit_values(target, values):
         for k, v in values.iteritems():
+            if isinstance(v, type):
+                v = v.query.order_by(func.random()).first()
             setattr(target, k, v)
 
-    def set_local_fields(self, target, mixer, exclude=None, related_explicit_values=None):
-        exclude = exclude or []
-        related_explicit_values = related_explicit_values or dict()
-        mapper = self.model_class._sa_class_manager.mapper
-        columns = [c for c in mapper.columns if not c.
+    def set_local_fields(self, target, mixer, exclude):
+        columns = [c for c in self.mapper.columns if not c.
                    nullable and not c.name in exclude]
+
         for column in columns:
             if column.default:
                 v = column.default.execute(mixer.db.session.bind)
@@ -105,8 +113,11 @@ class ModelMixer:
                 v = self.generator_for(mixer.registry, column).next()
             setattr(target, column.name, v)
 
-        for prop in mapper.iterate_properties:
-            if hasattr(prop, 'direction') and prop.direction == MANYTOONE:
+    def set_related_fields(self, target, mixer, exclude, related_explicit_values):
+        related_explicit_values = related_explicit_values or dict()
+
+        for prop in self.mapper.iterate_properties:
+            if hasattr(prop, 'direction') and prop.direction == MANYTOONE and not prop.key in exclude:
                 related_values = related_explicit_values.get(prop.key, dict())
                 value = mixer.blend(prop.mapper.class_, **related_values)
                 col = prop.local_remote_pairs[0][0]
