@@ -2,6 +2,7 @@
 
 	* Version 0.1.2
 	* Minor release
+	* Relared values can be setted from db by random
 
 2012-08-13  klen
 
